suffix_automaton_arr.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(karatsuba karatsuba.cpp)
 add_executable(suffix_array suffix_array.cpp)
 
 add_executable(suffix_automaton_map suffix_automaton_map.cpp)
+
+add_executable(suffix_automaton_arr suffix_automaton_arr.cpp)
