--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,5 @@ add_executable(minCostFlow minCostFlow.cpp)
 add_executable(suffix_automaton_map suffix_automaton_map.cpp)
 
 add_executable(suffix_automaton_arr suffix_automaton_arr.cpp)
+
+add_executable(fft fft.cpp)
