--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DLOCAL -O2 -Wall")
 add_executable(karatsuba karatsuba.cpp)
 
 add_executable(suffix_array suffix_array.cpp)
+
+add_executable(2chinese 2chinese.cpp)
