semi planes (some problems)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,6 @@ add_executable(hungarian hungarian.cpp)
 
 add_executable(planarity_test planarity_test.cpp)
 
-add_executable(convex_hull convex_hull.cpp)
+add_executable(convex_hull convex_hull.cpp point.h)
 
+add_executable(semi_planes semi_planes.cpp point.h)
