--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(team_notebook_Innopolis_U)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DLOCAL -O2 -Wall")
 
+add_executable(manacher manacher.cpp)
+
 add_executable(karatsuba karatsuba.cpp)
 
 add_executable(suffix_array suffix_array.cpp)
