added hungarian with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(team_notebook_Innopolis_U)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -DLOCAL -O2 -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DLOCAL -O2 -Wall")
 
 add_executable(karatsuba karatsuba.cpp)
 
@@ -16,3 +16,5 @@ add_executable(suffix_automaton_map suffix_automaton_map.cpp)
 add_executable(suffix_automaton_arr suffix_automaton_arr.cpp)
 
 add_executable(fft fft.cpp)
+
+add_executable(hungarian hungarian.cpp)
